# procman

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
cmake/: lcmtypes.cmake
deputy/: CMakeLists.txt  event_loop.cpp  event_loop_test.cpp  exec_string_utils.cpp  exec_string_utils.hpp  procinfo.hpp  procinfo_generic.cpp  procinfo_linux.cpp  procman.cpp  procman.hpp  procman_deputy.cpp  procman_deputy.hpp  signal_pipe.hpp
doc/: Doxyfile  DoxygenLayout.xml  doxypypy.py
doc/content/: comms.md  config_file.md  design.md  main.md  tutorial.md
lcmtypes/: procman_command2_t.lcm  procman_deputy_cmd2_t.lcm  procman_discovery_t.lcm  procman_info2_t.lcm  procman_lcm_cmd_desired_t.lcm  procman_lcm_cmd_status_t.lcm  procman_lcm_cmd_t.lcm  procman_lcm_command2_t.lcm  procman_lcm_deputy_cmd2_t.lcm  procman_lcm_deputy_info_t.lcm  procman_lcm_discovery_t.lcm  procman_lcm_info2_t.lcm  procman_lcm_orders2_t.lcm  procman_lcm_orders_t.lcm  procman_lcm_output_t.lcm  procman_lcm_printf_t.lcm  procman_lcm_sheriff_cmd2_t.lcm  procman_orders2_t.lcm  procman_printf_t.lcm  procman_sheriff_cmd2_t.lcm
python/: CMakeLists.txt  procman-sheriff.glade  setup.py
python/scripts/: procman-sheriff
python/src/bot_procman/: __init__.py  sheriff.py
python/src/bot_procman/sheriff_gtk/: command_treeview.py  sheriff_gtk.py
python/src/procman/: __init__.py  sheriff.py  sheriff_cli.py  sheriff_config.py  sheriff_script.py
python/src/procman/sheriff_gtk/: command_console.py  command_model.py  command_treeview.py  deputies_treeview.py  hosts_treeview.py  sheriff_dialogs.py  sheriff_gtk.py
src/: CMakeLists.txt
src/deputy/: CMakeLists.txt  event_loop.cpp  event_loop.hpp  lcm_util.cpp  lcm_util.hpp  procinfo.cpp  procinfo.hpp  procman.cpp  procman.hpp  procman_deputy.c  procman_deputy.cpp  procman_deputy.hpp  signal_pipe.cpp  signal_pipe.hpp
src/procman/: CMakeLists.txt  exec_string_utils.cpp  exec_string_utils.hpp  procinfo.hpp  procinfo_linux.cpp  procman.cpp  procman.hpp
test/: test.cfg
